align nav items and add position fixed to top

--- a/src/layout/Header/style.css
+++ b/src/layout/Header/style.css
@@ -2,10 +2,11 @@ nav {
     width: 50%;
     display: flex;
     justify-content: space-around;
+    align-items: center;
     color: grey;
     position: fixed;
     right: 0;
-    align-items: baseline;
+    top: 0.5rem;
 }
 
 a {
